--- a/src/templates/partials/layout.hbs
+++ b/src/templates/partials/layout.hbs
@@ -4,15 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>{{ profile.name }} :: {{ profile.headline }}</title>
+    <title>{{ profile.name }} :: {{ profile.headline.[0] }}</title>
 
     <link rel="stylesheet" href="/assets/css/main.css" />
 
-    <meta name="description" content="{{ profile.about }}" />
+    <meta name="description" content="{{ join profile.about ' ' }}" />
 
-    <meta property="og:title" content="" />
+    <meta
+      property="og:title"
+      content="{{ profile.name }} :: {{ profile.headline.[0] }}"
+    />
     <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://tomasz.sobczak.me.uk" />
     <meta property="og:image" content="" />
     <meta property="og:image:alt" content="" />
 
