--- a/src/templates/partials/layout.hbs
+++ b/src/templates/partials/layout.hbs
@@ -4,20 +4,27 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>{{ profile.name }} :: {{ profile.headline.[0] }}</title>
-
     <link rel="stylesheet" href="/assets/css/main.css" />
 
+    <title>{{ profile.name }} :: {{ profile.headline.[0] }}</title>
     <meta name="description" content="{{ join profile.about ' ' }}" />
 
-    <meta
-      property="og:title"
-      content="{{ profile.name }} :: {{ profile.headline.[0] }}"
-    />
-    <meta property="og:type" content="" />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:profile:first_name" content="{{ profile.firstName }}" />
+    <meta property="og:profile:last_name" content="{{ profile.lastName }}" />
     <meta property="og:url" content="https://tomasz.sobczak.me.uk" />
-    <meta property="og:image" content="" />
-    <meta property="og:image:alt" content="" />
+    <meta property="og:title" content="{{ profile.name }}" />
+    <meta
+      property="og:description"
+      content="{{join profile.headline ' | ' }}"
+    />
+    <meta
+      property="og:image"
+      content="https://tomasz.sobczak.me.uk/assets/img/avatar.webp"
+    />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
 
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" href="/icon.svg" type="image/svg+xml" />
