--- a/src/templates/partials/layout.hbs
+++ b/src/templates/partials/layout.hbs
@@ -26,9 +26,8 @@
     <meta property="og:image:width" content="300" />
     <meta property="og:image:height" content="300" />
 
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/img/logo.svg" />
+    <link rel="icon" type="image/png" href="/assets/img/logo.png" />
   </head>
 
   <body>
