--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -19,6 +19,7 @@
 </aside>
 
 <footer>
-  <span></span><span>{{ profile.name }} © {{ currentYear }}</span>
+  <span><span class="logo"></span></span>
+  <span>{{ profile.name }} © {{ currentYear }}</span>
 </footer>
 {{/layout}}
