--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -14,6 +14,7 @@
 
   --font-color: light-dark(#111, #fafafa);
   --border-color: light-dark(#999, #999);
+  --logo-background-color: light-dark(#abbaba, #050505);
 
   --selection-background-color: light-dark(#fcdbb3, #f39c00);
   --selection-font-color: light-dark(#111, #fafafa);
