--- a/src/assets/css/side.css
+++ b/src/assets/css/side.css
@@ -50,5 +50,24 @@ body > aside {
         }
       }
     }
+
+    .proficiency {
+      display: block;
+      height: 1px;
+      background-color: var(--side-divider-color);
+      position: relative;
+      margin: 0.3rem auto 0.4rem;
+
+      &::after {
+        content: "";
+        width: var(--level);
+        display: block;
+        position: absolute;
+        left: 0;
+        top: -3px;
+        background: var(--side-divider-color);
+        height: 7px;
+      }
+    }
   }
 }
