--- a/src/templates/partials/about.hbs
+++ b/src/templates/partials/about.hbs
@@ -1,6 +1,6 @@
 <h2>About</h2>
 <img
-  src="/assets/img/avatar.webp"
+  src="/assets/img/photo.webp"
   alt="Profile picture of {{ profile.name}}"
   width="200"
   height="200"
