--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -14,8 +14,9 @@
 <aside>
   <section data-section="education">{{> education }}</section>
   <section data-section="courses">{{> courses }}</section>
-  <section data-section="skills">{{> skills }}</section>
+  <section data-section="top-skills">{{> top-skills }}</section>
   <section data-section="languages">{{> languages }}</section>
+  <section data-section="skills">{{> skills }}</section>
 </aside>
 
 <footer>
