--- a/src/templates/partials/experience.hbs
+++ b/src/templates/partials/experience.hbs
@@ -11,6 +11,19 @@
     </h4>
   </header>
 
-  <p>{{ description }}</p>
+  <ul>
+    {{#each description}}
+    <li>{{ this }}</li>
+    {{/each}}
+  </ul>
+
+  <footer>
+    <p>
+      <strong>Skills:</strong>
+      {{#each skills}}
+      <span data-id="{{this}}">{{ expandSkillId this }}</span>
+      {{/each}}
+    </p>
+  </footer>
 </div>
 {{/each}}
