--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -17,10 +17,12 @@
   <section data-section="top-skills">{{> top-skills }}</section>
   <section data-section="languages">{{> languages }}</section>
   <section data-section="skills">{{> skills }}</section>
+
+  <span class="logo" aria-hidden="true"></span>
 </aside>
 
 <footer>
-  <span><span class="logo"></span></span>
+  <span>&nbsp;</span>
   <span>{{ profile.name }} © {{ currentYear }}</span>
 </footer>
 {{/layout}}
