--- a/src/assets/css/print.css
+++ b/src/assets/css/print.css
@@ -9,11 +9,12 @@
 @media print {
   :root {
     --side-panel-width: 25rem;
+    --max-content-width: 95%;
   }
 
   body {
     background: white;
-    max-width: 95%;
+    font-size: 13.5px;
     zoom: 85%;
 
     > header {
@@ -28,13 +29,19 @@
         img {
           display: none;
         }
+
+        &::before,
+        &::after {
+          width: 200%;
+          transform: translateX(-25%);
+        }
       }
     }
 
     aside {
       /* Temporary hack for printing the page */
       /* roughly 3 pages A4 with the current content */
-      height: 332vh;
+      height: calc(100% + 350px);
 
       [data-section="languages"] {
         &::after {
@@ -44,6 +51,13 @@
 
       [data-section="skills"] {
         padding-top: 1rem;
+      }
+
+      .logo {
+        opacity: 0.25;
+        position: fixed;
+        left: 4rem;
+        bottom: 2rem;
       }
     }
 
@@ -58,13 +72,6 @@
     footer {
       > span:last-child {
         display: none;
-      }
-
-      .logo {
-        opacity: 0.25;
-        position: fixed;
-        left: 4rem;
-        bottom: 2rem;
       }
     }
   }
