--- a/src/assets/css/side.css
+++ b/src/assets/css/side.css
@@ -2,6 +2,8 @@
  * Side section of the page
  */
 body > aside {
+  position: relative;
+
   & > section {
     padding-bottom: 2rem;
     position: relative;
@@ -17,7 +19,7 @@ body > aside {
       right: -2rem;
     }
 
-    &:last-child::after {
+    &:last-of-type::after {
       display: none;
     }
 
@@ -69,5 +71,20 @@ body > aside {
         height: 7px;
       }
     }
+  }
+
+  .logo {
+    z-index: 2;
+    position: absolute;
+
+    left: 2rem;
+    bottom: -3rem;
+    display: block;
+    width: calc(var(--side-panel-width) - 4rem);
+    height: calc(var(--side-panel-width) - 4rem);
+
+    opacity: 0.75;
+    background-color: var(--logo-background-color);
+    mask: url(/assets/img/logo.svg) no-repeat center;
   }
 }
